# fnkt

./: LICENSE  README.md  concat.sh  pyproject.toml
fnkt/: __init__.py  cli.py  generator.py  runner.py
workflows/: download_images.py  print_current_time.py  print_the_current_time.py  workflow_f75be458.py
