[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fnkt"
version = "0.1.0"
description = "Generate and run self-contained Python workflows"
requires-python = ">=3.8"
dependencies = [
    "litellm>=1.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "rich>=13.0.0",
]

[project.scripts]
fnkt = "fnkt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fnkt"] 